--- a/sdk/identity/pom.xml
+++ b/sdk/identity/pom.xml
@@ -16,6 +16,7 @@
 
   <modules>
     <module>azure-identity</module>
+    <module>azure-identity-v2</module>
     <module>azure-identity-perf</module>
     <module>azure-identity-extensions</module>
     <module>azure-identity-broker</module>
