add PR to 'Initialize project list variable for PR test run' since this task is specific to PRs

--- a/eng/pipelines/templates/steps/generate-project-list-and-cache-maven-repository.yml
+++ b/eng/pipelines/templates/steps/generate-project-list-and-cache-maven-repository.yml
@@ -54,7 +54,7 @@ steps:
   condition: eq(variables['ArtifactPackageNames'], '')
 
 - task: PowerShell@2
-  displayName: Initialize project list variable for test run
+  displayName: Initialize project list variable for PR test run
   inputs:
     pwsh: true
     filePath: eng/pipelines/scripts/generate-project-list.ps1
