testing print env 2

--- a/sdk/openai/openai-build.yml
+++ b/sdk/openai/openai-build.yml
@@ -1,9 +1,7 @@
 steps:
   - pwsh: |
-      Write-Host "env:PIPELINE_WORKSPACE/.m2"  
-      $env:PIPELINE_WORKSPACE/.m2  
-      Write-Host $env:PIPELINE_WORKSPACE/.m2
-        
+      Write-Host "ls $env:PIPELINE_WORKSPACE/.m2"
+      ls $env:PIPELINE_WORKSPACE/.m2
         
       # Define repository details
       $repoUrl = "https://github.com/openai/openai-java.git"
