--- a/sdk/openai/openai-build.yml
+++ b/sdk/openai/openai-build.yml
@@ -1,7 +1,7 @@
 steps:
   - pwsh: |
-      Write-Host "ls $env:PIPELINE_WORKSPACE/.m2"
-      ls $env:PIPELINE_WORKSPACE/.m2
+      Write-Host "ls $env:PIPELINE_WORKSPACE/.m2 -Recurse"
+      ls $env:PIPELINE_WORKSPACE/.m2 -Recurse
         
       # Define repository details
       $repoUrl = "https://github.com/openai/openai-java.git"
@@ -51,6 +51,10 @@ steps:
       $updatedDependenciesContent = $dependenciesContent -replace 'com.openai:openai-java;[0-9.]+', $newVersionInExternalDependenciesFile
       Write-Host "Updated the version in the external_dependencies.txt file: $updatedDependenciesContent"        
       Set-Content -Path $dependenciesFilePath -Value $updatedDependenciesContent
+        
+        
+      Write-Host "ls $env:PIPELINE_WORKSPACE/.m2 -Recurse"
+      ls $env:PIPELINE_WORKSPACE/.m2/ -Recurse
         
       Write-Host "Running the version update script"
       cd ../../1/s/
