Hack to make the dotnet-benchmark a simple repro for test against local proxy

--- a/sdk/cosmos/azure-cosmos-dotnet-benchmark/pom.xml
+++ b/sdk/cosmos/azure-cosmos-dotnet-benchmark/pom.xml
@@ -410,7 +410,7 @@ Licensed under the MIT License.
                   </descriptorRefs>
                   <archive>
                     <manifest>
-                      <mainClass>com.azure.cosmos.dotnet.benchmark.Main</mainClass>
+                      <mainClass>com.azure.cosmos.dotnet.benchmark.ThinClientReproMain</mainClass>
                     </manifest>
                   </archive>
                 </configuration>
