--- a/sdk/core/pom.xml
+++ b/sdk/core/pom.xml
@@ -26,6 +26,7 @@
     <module>azure-core-serializer-json-gson</module>
     <module>azure-core-serializer-json-jackson</module>
     <module>azure-core-test</module>
+    <module>azure-core-test-v2</module>
     <module>azure-core-tracing-opentelemetry</module>
     <module>azure-core-tracing-opentelemetry-samples</module>
     <module>azure-core-version-tests</module>
