--- a/sdk/openai/openai-build.yml
+++ b/sdk/openai/openai-build.yml
@@ -2,10 +2,10 @@ steps:
   - pwsh: |
       Write-Host "ls $env:PIPELINE_WORKSPACE/.m2/repository/com/"
       ls $env:PIPELINE_WORKSPACE/.m2/repository/com
-        
+
       Write-Host "ls $env:PIPELINE_WORKSPACE/.m2/repository/com/azure"
       ls $env:PIPELINE_WORKSPACE/.m2/repository/com/azure
-        
+
       # Define repository details
       $repoUrl = "https://github.com/openai/openai-java.git"
       $branchName = "release-please--branches--main--changes--next"
@@ -42,18 +42,18 @@ steps:
       Set-Content -Path $buildGradlePath -Value $updatedContent
 
       Write-Host "gradle --version"
-      gradle --version  
+      gradle --version
 
       # Build the project and publish to the local Maven repository
       Write-Host "Building the project and publishing to the local Maven repository"
-      ./gradlew clean build -x test -Dmaven.repo.local=$env:PIPELINE_WORKSPACE/.m2/repository publishToMavenLocal
-        
+      ./gradlew clean build -x test "-Dmaven.repo.local=$env:PIPELINE_WORKSPACE/.m2/repository" publishToMavenLocal
+
       Write-Host "ls $env:PIPELINE_WORKSPACE/.m2/repository/com/openai/openai-java"
       ls $env:PIPELINE_WORKSPACE/.m2/repository/com/openai/openai-java
-        
+
       Write-Host "cat ./../../_temp/openai-java/build/reports/problems/problems-report.html"
       cat ./../../_temp/openai-java/build/reports/problems/problems-report.html
-        
+
       # Define the path to the external_dependencies.txt file
       $dependenciesFilePath = './../../1/s/eng/versioning/external_dependencies.txt'
 
@@ -61,7 +61,7 @@ steps:
       $newVersionInExternalDependenciesFile = "com.openai:openai-java;$newVersion"
       $dependenciesContent = Get-Content -Path $dependenciesFilePath -Raw
       $updatedDependenciesContent = $dependenciesContent -replace 'com.openai:openai-java;[0-9.]+', $newVersionInExternalDependenciesFile
-      Write-Host "Updated the version in the external_dependencies.txt file: $updatedDependenciesContent"        
+      Write-Host "Updated the version in the external_dependencies.txt file: $updatedDependenciesContent"
       Set-Content -Path $dependenciesFilePath -Value $updatedDependenciesContent
 
       Write-Host "Running the version update script"
