Updates to enable CI

--- a/sdk/tools/azure-openrewrite/src/main/resources/META-INF/rewrite/migrationRecipes/core/azure-core-migration.yml
+++ b/sdk/tools/azure-openrewrite/src/main/resources/META-INF/rewrite/migrationRecipes/core/azure-core-migration.yml
@@ -127,6 +127,10 @@ recipeList:
       oldFullyQualifiedTypeName: com.azure.core.util.Context
       newFullyQualifiedTypeName: io.clientcore.core.util.Context
 
+  - org.openrewrite.java.ChangeType:
+        oldFullyQualifiedTypeName: com.azure.core.http.rest.RequestOptions
+        newFullyQualifiedTypeName: io.clientcore.core.http.models.RequestOptions
+
   - org.openrewrite.java.ChangeStaticFieldToMethod:
       oldClassName: io.clientcore.core.util.Context
       oldFieldName: NONE
