allow snapshots for transitive dependencies of openai

--- a/sdk/openai/azure-ai-openai/pom.xml
+++ b/sdk/openai/azure-ai-openai/pom.xml
@@ -130,7 +130,7 @@
             </bannedDependencies>
             <requireReleaseDeps>
               <excludes>
-                <exclude>com.openai:openai-java</exclude>
+                <exclude>com.openai:*</exclude>
               </excludes>
             </requireReleaseDeps>
           </rules>
