--- a/sdk/tools/azure-openrewrite/pom.xml
+++ b/sdk/tools/azure-openrewrite/pom.xml
@@ -12,6 +12,8 @@
     <description>This module contains OpenRewrite recipe for migrating to next generation Microsoft Azure client libraries.</description>
 
     <properties>
+      <maven.compiler.source>8</maven.compiler.source>
+      <maven.compiler.target>8</maven.compiler.target>
       <packageOutputDirectory>${project.build.directory}</packageOutputDirectory>
     </properties>
 
