--- a/sdk/search/azure-search-documents/pom.xml
+++ b/sdk/search/azure-search-documents/pom.xml
@@ -110,4 +110,29 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-enforcer-plugin</artifactId>
+        <version>3.5.0</version> <!-- {x-version-update;org.apache.maven.plugins:maven-enforcer-plugin;external_dependency} -->
+        <configuration>
+          <rules>
+            <bannedDependencies>
+              <includes>
+                <include>com.openai:openai-java:[0.8.1]</include> <!-- {x-include-update;com.openai:openai-java;external_dependency} -->
+              </includes>
+            </bannedDependencies>
+            <requireReleaseDeps>
+              <excludes>
+                <exclude>com.openai:*</exclude>
+              </excludes>
+            </requireReleaseDeps>
+          </rules>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
 </project>
