--- a/sdk/openai/openai-build.yml
+++ b/sdk/openai/openai-build.yml
@@ -3,14 +3,19 @@ steps:
       # Define repository details
       $repoUrl = "https://github.com/openai/openai-java.git"
       $branchName = "release-please--branches--main--changes--next"
-
+  
       # Clone the repository and checkout the specified branch
       Write-Host "Cloning repository: $repoUrl"
       git clone $repoUrl openai-java
+      
       cd openai-java
+      
       Write-Host "Checking out branch: $branchName"
       git checkout $branchName
+    displayName: Clone OpenAI Java repository and checkout branch
+    workingDirectory: $(Agent.TempDirectory)
 
+  - pwsh: |
       # Define the path to the build.gradle.kts file
       $buildGradlePath = './build.gradle.kts'
 
@@ -20,25 +25,30 @@ steps:
       # Extract the version number from the build.gradle.kts file
       $versionLine = $buildGradleContent | Select-String -Pattern 'version\s*=\s*\"([^\"]+)\"'
       if ($versionLine -match 'version\s*=\s*\"([^\"]+)\"') {
-          $version = $matches[1]
-          Write-Host "Current version: $version"
+        $version = $matches[1]
+        Write-Host "Current version: $version"
       } else {
-          Write-Host "Version not found"
-          exit 1
+        Write-Host "Version not found"
+        exit 1
       }
 
       # Define the new version with '-SNAPSHOT' appended
       $newVersion = "$version-SNAPSHOT"
       Write-Host "New version: $newVersion"
-
+        
       # Update the version in the build.gradle.kts file
       $updatedContent = $buildGradleContent -replace 'version\s*=\s*\"([^\"]+)\"', "version = `"$newVersion`""
       Set-Content -Path $buildGradlePath -Value $updatedContent
+    displayName: Find current version and update to SNAPSHOT
+    workingDirectory: $(Agent.TempDirectory)
 
-      # Build the project and publish to the local Maven repository
+  - pwsh: |
       Write-Host "Building the project and publishing to the local Maven repository"
       ./gradlew clean build -x test "-Dmaven.repo.local=$env:PIPELINE_WORKSPACE/.m2/repository" publishToMavenLocal
+    displayName: Build the project and publish to the local Maven repository
+    workingDirectory: $(Agent.TempDirectory)
 
+  - pwsh: |        
       # Define the path to the external_dependencies.txt file
       $dependenciesFilePath = './../../1/s/eng/versioning/external_dependencies.txt'
 
@@ -52,5 +62,5 @@ steps:
       Write-Host "Running the version update script"
       cd ../../1/s/
       python eng/versioning/update_versions.py --bt client --ut external_dependency --sr
-    displayName: Clone, build, and update OpenAI Java with necessary steps
+    displayName: Update external_dependencies.txt and run version update script
     workingDirectory: $(Agent.TempDirectory)
