[TESTING ONLY, WILL NOT BE CHECKED IN] testing AdditionalValidationPackagesFromPackageSetFn

--- a/sdk/cosmosdbforpostgresql/ci.yml
+++ b/sdk/cosmosdbforpostgresql/ci.yml
@@ -14,6 +14,8 @@ trigger:
       - sdk/cosmosdbforpostgresql/pom.xml
       - sdk/cosmosdbforpostgresql/azure-resourcemanager-cosmosdbforpostgresql/pom.xml
 
+# JRS - Test, will not be checked in
+
 pr:
   branches:
     include:
