--- a/sdk/openai/openai-build.yml
+++ b/sdk/openai/openai-build.yml
@@ -49,26 +49,9 @@ steps:
     displayName: Build the project and publish to the local Maven repository
     workingDirectory: $(Agent.TempDirectory)
 
-  - pwsh: |        
-      # Define the path to the external_dependencies.txt file
-      $dependenciesFilePath = "$(Agent.TempDirectory)/../../1/s/eng/versioning/external_dependencies.txt"
-
-      # Update the version in the external_dependencies.txt file
-      $newVersionInExternalDependenciesFile = "com.openai:openai-java;$newVersion"
-      $dependenciesContent = Get-Content -Path $dependenciesFilePath -Raw
-      $updatedDependenciesContent = $dependenciesContent -replace 'com.openai:openai-java;[0-9.]+', $newVersionInExternalDependenciesFile
-      Write-Host "Updated the version in the external_dependencies.txt file: $updatedDependenciesContent"
-      Set-Content -Path $dependenciesFilePath -Value $updatedDependenciesContent
-
-      Write-Host "Running the version update script"
-      cd openai-java
-      python eng/versioning/update_versions.py --bt client --ut external_dependency --sr
-    displayName: Update external_dependencies.txt and run version update script
-    workingDirectory: $(Agent.TempDirectory)
-
   - pwsh: |
       # Define the path to the external_dependencies.txt file
-      $dependenciesFilePath = "_work/1/s/eng/versioning/external_dependencies.txt"
+      $dependenciesFilePath = "eng/versioning/external_dependencies.txt"
 
       # Update the version in the external_dependencies.txt file
       $newVersionInExternalDependenciesFile = "com.openai:openai-java;$newVersion"
@@ -77,7 +60,7 @@ steps:
       Write-Host "Updated the version in the external_dependencies.txt file: $updatedDependenciesContent"
       Set-Content -Path $dependenciesFilePath -Value $updatedDependenciesContent
     displayName: Update external_dependencies.txt
-    workingDirectory: $(Agent.TempDirectory)
+    workingDirectory: $(System.DefaultWorkingDirectory)
 
   - task: PythonScript@0
     displayName: 'Update versions for source build'
