set newVersion to $env and access it in subsequence steps

--- a/sdk/openai/openai-build.yml
+++ b/sdk/openai/openai-build.yml
@@ -3,13 +3,13 @@ steps:
       # Define repository details
       $repoUrl = "https://github.com/openai/openai-java.git"
       #$branchName = "release-please--branches--main--changes--next"
-  
+
       # Clone the repository and checkout the specified branch
       Write-Host "Cloning repository: $repoUrl"
       git clone $repoUrl openai-java
-      
+
       cd openai-java
-      
+
       #Write-Host "Checking out branch: $branchName"
       #git checkout $branchName
     displayName: Clone OpenAI Java repository and checkout branch
@@ -33,17 +33,18 @@ steps:
       }
 
       # Define the new version with '-SNAPSHOT' appended
-      $newVersion = "$version-SNAPSHOT"
-      Write-Host "New version: $newVersion"
-        
+      $env:newVersion = "$version-SNAPSHOT"
+      Write-Host "New version: $env:newVersion"
+
       # Update the version in the build.gradle.kts file
-      $updatedContent = $buildGradleContent -replace 'version\s*=\s*\"([^\"]+)\"', "version = `"$newVersion`""
+      $updatedContent = $buildGradleContent -replace 'version\s*=\s*\"([^\"]+)\"', "version = `"$global:newVersion`""
       Set-Content -Path $buildGradlePath -Value $updatedContent
       
-      # Export the new version to be used in subsequent steps
-      Write-Output "::set-output name=newVersion::$newVersion"
+      # Set the output variable
+      Write-Output "::set-output name=newVersion::$env:newVersion"
     displayName: Find current version and update to SNAPSHOT
     workingDirectory: $(Agent.TempDirectory)
+    id: setNewVersion
 
   - pwsh: |
       Write-Host "Building the project and publishing to the local Maven repository"
@@ -55,9 +56,14 @@ steps:
   - pwsh: |
       # Define the path to the external_dependencies.txt file
       $dependenciesFilePath = "eng/versioning/external_dependencies.txt"
-
+    
+      # Access the environment variable from the previous step
+      $newVersion = "${{ steps.setNewVersion.outputs.newVersion }}"
+      Write-Host "New version from preview step, setNewVersion: $newVersion"
+            
       # Update the version in the external_dependencies.txt file
       $newVersionInExternalDependenciesFile = "com.openai:openai-java;$env:newVersion"
+      
       $dependenciesContent = Get-Content -Path $dependenciesFilePath -Raw
       $updatedDependenciesContent = $dependenciesContent -replace 'com.openai:openai-java;[0-9.]+', $newVersionInExternalDependenciesFile
       Write-Host "Updated the version in the external_dependencies.txt file: $updatedDependenciesContent"
